--- a/templates/content.html
+++ b/templates/content.html
@@ -1,4 +1,4 @@
-<strong> Podaj strony linia po linii </strong> test
+<strong> Podaj strony linia po linii </strong>
 <form action="index.php" name="pagesForm" method="post">
     <textarea rows="15" cols="100" name="pagesToCheck"></textarea>
     <br>
